test: improvements to unit test classes